@@ -1,3 +1,6 @@
+* Thu Mar 15 2007 Jesse Keating <jkeating@redhat.com>
+- Use yum's built in exclude handling
+
 * Tue Mar 14 2007 Jesse Keating <jkeating@redhat.com>
 - Do things faster/smarter if we've only asked for one disc
 
